@@ -70,7 +70,10 @@
   - [ ] Remove unneeded files
 - [ ] Make a top-level DEPENDENCIES file (from CI/before_install.sh)
   and remove all others
+- [ ] When all sources in src/ top-level dir, changes CMAKE_CXX_FLAGS
+  in CMakeLists to ${CMAKE_SOURCE_DIR}/src/,,
 ***** TODO Correct NEW project setup
+      CLOCK: [2016-01-24 dim. 22:17]--[2016-01-24 dim. 22:27] =>  0:10
       CLOCK: [2016-01-16 sam. 23:13]--[2016-01-16 sam. 23:23] =>  0:10
       CLOCK: [2016-01-16 sam. 19:49]--[2016-01-16 sam. 20:38] =>  0:49
       CLOCK: [2016-01-05 mar. 22:14]--[2016-01-05 mar. 22:20] =>  0:06
@@ -91,9 +94,9 @@
   - [X] We also have to create them from *.cfg.in (with ressources.cfg)
     The generated file is dirctly generated in client's binary dir.
 - [X] Now, We have to generate resources.cfg the same way
+- [X] Logger prints full pathname with the filename, fix it
 - [ ] Find how to compute FT and SLOC for the now-global TODO version
 - [ ] Individual project README items should go here
-- [ ] Logger prints full pathname with the filename, fix it
 ***** DONE Must install cookiechoices on rainbrurpg.org
   CLOCK: [2015-09-27 dim. 18:21]--[2015-09-27 dim. 19:30] =>  1:09
 - [X] For reference
